# opendataloader-bench

./: .gitattributes  CLAUDE.md  README.md  THIRD_PARTY_LICENSES.txt  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.in  requirements.txt  setup.py
ground-truth/markdown/: 01030000000010.md  01030000000020.md  01030000000030.md  01030000000033.md  01030000000041.md  01030000000066.md  01030000000067.md  01030000000098.md  01030000000110.md  01030000000118.md  01030000000126.md  01030000000142.md  01030000000146.md  01030000000153.md  01030000000163.md  01030000000164.md  01030000000167.md  01030000000174.md  01030000000185.md  01030000000186.md  01030000000192.md
prediction/docling/: powermetrics.json  powermetrics.txt  summary.json
prediction/marker/: evaluation.csv  summary.json
prediction/markitdown/: evaluation.json  powermetrics.txt  summary.json
prediction/mineru/: evaluation.csv  summary.json
prediction/opendataloader/: evaluation.csv  evaluation.json  powermetrics.json  powermetrics.txt  (+1 more)
prediction/opendataloader-hybrid/: summary.json
scripts/: generate-licenses.sh
src/: engine_registry.py  generate_benchmark_chart.py  generate_groundtruth_markdown.py  generate_history.py  generate_pdfs_thumbnail.py  generate_powermetrics.py  pdf_parser_docling.py  pdf_parser_marker.py  pdf_parser_markitdown.py  pdf_parser_opendataloader.py  pdf_parser_opendataloader_hybrid.py  pdf_parser_upstage.py  powermetrics.sh  run.py
tests/: test_converter_markdown_table.py  test_evaluator_heading_level.py  test_evaluator_reading_order.py  test_evaluator_table.py
(+1196 files in other folders)
