[project]
name = "opendataloader-bench"
version = "0.1.0"
description = "Benchmark for PDF-to-Markdown conversion engines"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apted>=1.0.3",
    "beautifulsoup4>=4.14.3",
    "docling>=2.65.0",
    "lxml>=6.0.2",
    "markitdown[pdf]>=0.1.4",
    "matplotlib>=3.10.8",
    "opendataloader-pdf>=1.4.1",
    "pdf2image>=1.17.0",
    "py-cpuinfo>=9.0.0",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
